# codez

./: .gitignore  CLAUDE.md  README.md
zmod/llm-compress/: Cargo.toml  README.md
zmod/llm-compress/src/: ccr.rs  command.rs  config.rs  lib.rs  preprocess.rs  protect.rs  query.rs  router.rs  score.rs  stats.rs
zmod/llm-compress/src/compress/: diff.rs  json.rs  log.rs  mod.rs  schema.rs  search.rs  tabular.rs  toon.rs  truncate.rs
zmod/llm-compress/tests/: cache_stability_test.rs  ccr_test.rs  command_test.rs  config_test.rs  diff_test.rs  json_test.rs  log_test.rs  orchestration_test.rs  parity_test.rs  preprocess_test.rs  protect_test.rs  query_test.rs  router_test.rs  schema_test.rs  score_test.rs  search_test.rs  stats_test.rs  tabular_test.rs  toon_helper_test.rs  transform_test.rs  truncate_test.rs
zmod/llm-compress/tests/fixtures/inherited/: NOTICE.md  manifest.toml
zmod/llm-compress/tests/fixtures/inherited/diff/: 066bc82007dc2dd4.expected  0cf5e189bd42fab1.expected  (+2 more)
zmod/llm-switch/: Cargo.toml  MultiModel.md  README.md
zmod/llm-switch/src/: config.rs  http.rs  lib.rs  namespace.rs  pipeline.rs  purpose.rs  sse.rs
zmod/llm-switch/src/connector/: anthropic.rs  anthropic_req.rs  anthropic_sse.rs  chat.rs  chat_req.rs  chat_sse.rs  mod.rs
zmod/llm-switch/src/transform/: mod.rs
zmod/llm-switch/tests/: anthropic_request_test.rs  anthropic_sse_test.rs  chat_request_test.rs  chat_sse_test.rs  config_test.rs  http_test.rs  live_test.rs  pipeline_test.rs  run_test.rs
zmod/llm-switch/tests/fixtures/: anthropic_req_system_user_tool_roundtrip.expected.json  anthropic_sse_text.jsonl  anthropic_sse_tool_call.jsonl  chat_req_multi_tool.expected.json  chat_req_system_user_tool_roundtrip.expected.json  chat_sse_text.jsonl  chat_sse_tool_call.jsonl
(+75 files in other folders)
