[package]
name = "codez-llm-compress"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "codez_llm_compress"
path = "src/lib.rs"

[dependencies]
codex-api = { path = "../../codex-rs/codex-api" }
codex-protocol = { path = "../../codex-rs/protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
chrono = { version = "0.4", features = ["clock"] }
tracing = "0.1"
sha2 = "0.10"
toon-format = { version = "0.5", default-features = false }

[dev-dependencies]
insta = "1"
tempfile = "3"
serial_test = "3"
